[project]
name = "emu3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.1",
    "transformers>=4.44.0",
    "tiktoken>=0.6.0",
    "flash-attn>=2.5.7",
    "pillow>=10.4.0",
    "packaging>=24.1",
]

[build-system]
requires = ["hatchling", "setuptools", "editables"]
build-backend = "hatchling.build"
